# mx-8004

./: Cargo.toml  Makefile  README.md  lcov.info
.github/workflows/: actions.yml
docs/: specification.md
docs/plans/: 2026-02-02-identity-nft-improvements.md
identity-registry/: Cargo.toml  sc-config.toml
identity-registry/interactor/: Cargo.toml
identity-registry/interactor/src/: interact.rs
identity-registry/meta/: Cargo.toml
identity-registry/src/: lib.rs
identity-registry/tests/: edge_cases_test.rs  identity_registry_test.rs
identity-registry/wasm/: Cargo.toml
identity-registry/wasm/src/: lib.rs
proxies/src/: identity_registry_proxy.rs  validation_registry_proxy.rs
reputation-registry/: Cargo.toml  sc-config.toml
reputation-registry/interactor/: Cargo.toml
reputation-registry/interactor/src/: interact.rs  reputation_registry_proxy.rs
reputation-registry/meta/: Cargo.toml
reputation-registry/src/: errors.rs  identity_registry_proxy.rs  lib.rs  storage.rs  validation_registry_proxy.rs
reputation-registry/tests/: access_control_test.rs  authenticity_loop_test.rs  edge_cases_test.rs  reputation_registry_test.rs
reputation-registry/wasm/: Cargo.toml
reputation-registry/wasm/src/: lib.rs
tests/: Cargo.toml
tests/src/: constants.rs  interact.rs  setup.rs
tests/tests/: cs_tests.rs  scenario_tests.rs
validation-registry/: Cargo.toml  sc-config.toml
validation-registry/interactor/: Cargo.toml
validation-registry/interactor/src/: interact.rs
validation-registry/meta/: Cargo.toml
validation-registry/src/: lib.rs  views.rs
validation-registry/tests/: edge_cases_test.rs
validation-registry/wasm/: Cargo.toml
validation-registry/wasm/src/: lib.rs
