[workspace]
resolver = "2"
members = [
    "common",
    "proxies",
    "identity-registry",
    "identity-registry/meta",
    "validation-registry",
    "validation-registry/meta",
    "reputation-registry",
    "reputation-registry/meta",
    "tests"
]

[patch.crates-io]
multiversx-sc              = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
multiversx-sc-modules      = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
multiversx-sc-scenario     = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
multiversx-sc-meta-lib     = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
multiversx-sc-snippets     = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
multiversx-chain-vm        = { git = "https://github.com/XOXNO/mx-sdk-rs.git", branch = "feat/built_in_functions_nft_update" }
