[package]
name = "identity-registry-meta"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2021"
publish = false

[dependencies.multiversx-sc-meta-lib]
version = "0.64.1"

[dependencies.identity-registry]
path = ".."

[lib]
path = "src/main.rs"

[[bin]]
name = "identity-registry-meta"
path = "src/main.rs"
